syntax = "proto3";

package kv;
option go_package = "./kv";

service KVService {
    rpc get(GetRequest) returns(GetResponse);
    rpc set(SetRequest) returns(SetResponse);
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetResponse {
    string value = 1;
}